--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -919,6 +919,41 @@ section,
 }
 
 /*--------------------------------------------------------------
+# Resume Section [Lonely Bootstrap Addition]
+--------------------------------------------------------------*/
+.resume-item::before {
+  content: '';
+  position: absolute;
+  left: 0;
+  top: 0;
+  height: 100%;
+  width: 2px;
+  background: var(--pink);
+}
+
+.resume-item::after {
+  content: '';
+  position: absolute;
+  left: -7px;
+  top: 0;
+  width: 16px;
+  height: 16px;
+  border: 2px solid var(--pink);
+  background: #fff;
+  border-radius: 50%;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  -ms-border-radius: 50%;
+  -o-border-radius: 50%;
+}
+
+.resume-item h5 {
+  font-size: 16px;
+  background: #e4ebf3;
+  width: fit-content;
+}
+
+/*--------------------------------------------------------------
 # Portfolio Section
 --------------------------------------------------------------*/
 .portfolio .portfolio-filters {
