--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -19,7 +19,7 @@
 
 /* Global Colors - The following color variables are used throughout the website. Updating them here will change the color scheme of the entire website */
 :root { 
-  --background-color: #000000; /* Background color for the entire website, including individual sections */
+  --background-color: #ffffff; /* Background color for the entire website, including individual sections */
   --default-color: #898989; /* Default color used for the majority of the text content across the entire website */
   --heading-color: #777777; /* Color for headings, subheadings and title throughout the website */
   --accent-color: #b8a07e; /* Accent color that represents your brand on the website. It's used for buttons, links, and other elements that need to stand out */
