scheek-css-updates_v01-9.16.25

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1218,7 +1218,7 @@ section,
 }
 
 /*--------------------------------------------------------------
-# Starter Section Section
+# Starter Section Section - ENTER NEW DESIGNS HERE
 --------------------------------------------------------------*/
 .starter-section {
   /* Add your styles here */
