--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1297,7 +1297,7 @@ section,
   inset: 0;
   background:
     linear-gradient(rgba(10, 10, 30, 0.6), rgba(10, 10, 30, 0.6)),
-    url("...motherboard-background.jpg") no-repeat center/cover;
+    url("../img/motherboard-background.jpg") no-repeat center/cover;
   z-index: 0;
   pointer-events: none;
 }
@@ -1325,6 +1325,3 @@ section,
   position: relative;
   z-index: 2;                         /* sits above motherboard bg */
 }
-/*--------------------------------------------------------------
-# SECTION-IMG-BG FIX ON 9/20/25
---------------------------------------------------------------*/
